--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwU5syzmlhcW",
-        "outputId": "1b539daa-d8c3-4858-9c40-3877352c5224"
+        "outputId": "0bd05583-9a82-4fb6-a85b-cc0b6e5eadf7"
       },
       "outputs": [
         {
@@ -178,11 +178,11 @@
           "name": "stdout",
           "text": [
             "Collecting pyngrok\n",
-            "  Downloading pyngrok-7.2.11-py3-none-any.whl.metadata (9.4 kB)\n",
+            "  Downloading pyngrok-7.2.12-py3-none-any.whl.metadata (9.4 kB)\n",
             "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.11/dist-packages (from pyngrok) (6.0.2)\n",
-            "Downloading pyngrok-7.2.11-py3-none-any.whl (25 kB)\n",
+            "Downloading pyngrok-7.2.12-py3-none-any.whl (26 kB)\n",
             "Installing collected packages: pyngrok\n",
-            "Successfully installed pyngrok-7.2.11\n",
+            "Successfully installed pyngrok-7.2.12\n",
             "Collecting findspark\n",
             "  Downloading findspark-2.0.1-py2.py3-none-any.whl.metadata (352 bytes)\n",
             "Downloading findspark-2.0.1-py2.py3-none-any.whl (4.4 kB)\n",
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -236,7 +236,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c77f9d52-26ae-4aa1-d175-e92736596712"
+        "outputId": "eba9e62b-752e-4a7b-f574-16e0734bc12e"
       },
       "outputs": [
         {
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -266,22 +266,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-Se1_tTAF09",
-        "outputId": "a0154d75-2e87-4ff2-cb01-0417291af83c"
+        "outputId": "5db7a59b-5408-40a1-9b5c-d707b8d88b29"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:pyngrok.process.ngrok:t=2025-06-26T01:50:57+0000 lvl=warn msg=\"can't bind default web address, trying alternatives\" obj=web addr=127.0.0.1:4040\n"
+            "WARNING:pyngrok.process.ngrok:t=2025-08-01T05:05:08+0000 lvl=warn msg=\"can't bind default web address, trying alternatives\" obj=web addr=127.0.0.1:4040\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://469f83b6d196:4040\n",
-            "Spark UI URL: https://b489-35-193-132-236.ngrok-free.app\n"
+            "http://d5d8befe36d7:4040\n",
+            "Spark UI URL: https://d49bd1da24ca.ngrok-free.app\n"
           ]
         }
       ],
@@ -750,19 +750,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70a5dec9-42a4-4624-8490-7263c343f622"
+        "outputId": "64ab6d73-cb98-456d-8f71-3b58c1a494d5"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+------------------+-----------+\n",
-            "|namespace|         tableName|isTemporary|\n",
-            "+---------+------------------+-----------+\n",
-            "|  default|california_housing|      false|\n",
-            "+---------+------------------+-----------+\n",
+            "+---------+--------------+-----------+\n",
+            "|namespace|     tableName|isTemporary|\n",
+            "+---------+--------------+-----------+\n",
+            "|         |streaming_data|       true|\n",
+            "+---------+--------------+-----------+\n",
             "\n"
           ]
         }
@@ -953,23 +953,22 @@
       ],
       "metadata": {
         "id": "fFwlzOJR-aW8",
-        "outputId": "2919c96a-560e-41b7-ea4e-d2308b4b51d3",
+        "outputId": "337d831b-fbcc-4361-d45c-139d8301dba4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------+------------------+-----------+\n",
-            "|namespace|         tableName|isTemporary|\n",
-            "+---------+------------------+-----------+\n",
-            "|  default|california_housing|      false|\n",
-            "|         |housinglimiteddata|       true|\n",
-            "+---------+------------------+-----------+\n",
+            "+---------+--------------+-----------+\n",
+            "|namespace|     tableName|isTemporary|\n",
+            "+---------+--------------+-----------+\n",
+            "|         |streaming_data|       true|\n",
+            "+---------+--------------+-----------+\n",
             "\n"
           ]
         }
@@ -1442,12 +1441,239 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from pyspark.sql.functions import *\n",
+        "from pyspark.sql.types import *\n",
+        "\n",
+        "#spotify_track_uri,ts,platform,ms_played,track_name,artist_name,album_name,reason_start,reason_end,shuffle,skipped\n",
+        "\n",
+        "schema = StructType([\n",
+        "    StructField(\"spotify_track_uri\",StringType()),\n",
+        "    StructField(\"ts\",TimestampType()),\n",
+        "    StructField(\"platform\",StringType()),\n",
+        "    StructField(\"ms_played\",LongType()),\n",
+        "    StructField(\"track_name\",StringType()),\n",
+        "    StructField(\"artist_name\",StringType()),\n",
+        "    StructField(\"album_name\",StringType()),\n",
+        "    StructField(\"reason_start\",StringType()),\n",
+        "    StructField(\"reason_end\",StringType()),\n",
+        "    StructField(\"shuffle\",BooleanType()),\n",
+        "    StructField(\"skipped\",BooleanType())\n",
+        "])\n",
+        "\n",
+        "stream_df = spark.readStream \\\n",
+        ".format(\"csv\") \\\n",
+        ".schema(schema) \\\n",
+        ".option(\"maxFilesPerTrigger\",1) \\\n",
+        ".option(\"path\",\"/content/StreamingData\") \\\n",
+        ".load()"
+      ],
       "metadata": {
-        "id": "Nzn7nN8rELWA"
+        "id": "H1CnnfsMvvDX"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"isStreaming: \",stream_df.isStreaming)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKUNba5I2Yh9",
+        "outputId": "1e8fa933-38c2-45c9-e199-04493fdbc4d5"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "isStreaming:  True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display(stream_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "vSHm3g-v2v3T",
+        "outputId": "6227d0e3-3bc8-4107-885c-acce685244ba"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "DataFrame[spotify_track_uri: string, ts: timestamp, platform: string, ms_played: bigint, track_name: string, artist_name: string, album_name: string, reason_start: string, reason_end: string, shuffle: boolean, skipped: boolean]"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#stream_df.show()\n",
+        "\n",
+        "# Correct way to display streaming data\n",
+        "query = stream_df.writeStream \\\n",
+        "    .format(\"memory\") \\\n",
+        "    .queryName(\"streaming_data\") \\\n",
+        "    .outputMode(\"append\") \\\n",
+        "    .start()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "q5QnD-BH3gMr"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To see the data, you can query the in-memory table\n",
+        "spark.sql(\"SELECT * FROM streaming_data\").show()"
+      ],
+      "metadata": {
+        "id": "6ysYiBRp36a1",
+        "outputId": "09731c8f-67f1-4de4-9ec7-0d784e570d4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+-------------------+----------+---------+--------------------+--------------------+--------------------+------------+----------+-------+-------+\n",
+            "|   spotify_track_uri|                 ts|  platform|ms_played|          track_name|         artist_name|          album_name|reason_start|reason_end|shuffle|skipped|\n",
+            "+--------------------+-------------------+----------+---------+--------------------+--------------------+--------------------+------------+----------+-------+-------+\n",
+            "|   spotify_track_uri|               NULL|  platform|     NULL|          track_name|         artist_name|          album_name|reason_start|reason_end|   NULL|   NULL|\n",
+            "|2J3n32GeLmMjwuAzy...|2013-07-08 02:44:34|web player|     3185| Say It, Just Say It|        The Mowgli's|Waiting For The Dawn|    autoplay|  clickrow|  false|  false|\n",
+            "|1oHxIPqJyvAYHy0PV...|2013-07-08 02:45:37|web player|    61865|Drinking from the...|       Calvin Harris|           18 Months|    clickrow|  clickrow|  false|  false|\n",
+            "|487OPlneJNni3NWC8...|2013-07-08 02:50:24|web player|   285386|         Born To Die|        Lana Del Rey|Born To Die - The...|    clickrow|   unknown|  false|  false|\n",
+            "|5IyblF777jLZj1vGH...|2013-07-08 02:52:40|web player|   134022|    Off To The Races|        Lana Del Rey|Born To Die - The...|   trackdone|  clickrow|  false|  false|\n",
+            "|0GgAAB0ZMllFhbNc3...|2013-07-08 03:17:52|web player|        0|           Half Mast|   Empire Of The Sun|  Walking On A Dream|    clickrow|   nextbtn|  false|  false|\n",
+            "|50VNvhzyaSplJCKWc...|2013-07-08 03:17:52|web player|    63485|          Impossible|        James Arthur|          Impossible|    clickrow|  clickrow|  false|  false|\n",
+            "|1I4EczxGBcPR3J3Ke...|2013-07-08 03:17:56|web player|        0|      We Own The Sky|                 M83|   Saturdays = Youth|     nextbtn|   nextbtn|  false|  false|\n",
+            "|5arVt2Wg0zbiWwAOZ...|2013-07-08 03:17:56|web player|     1268|Higher Ground - R...|Red Hot Chili Pep...|       Mother's Milk|     nextbtn|   nextbtn|  false|  false|\n",
+            "|1ixtaZc0Adil3yD1I...|2013-07-08 03:17:58|web player|        0|       Happy Up Here|            Röyksopp|       Happy Up Here|     nextbtn|   nextbtn|  false|  false|\n",
+            "|2v5mpowLQNFN7NC46...|2013-07-08 03:19:11|web player|        0|             Phantom|             Justice|             Phantom|     nextbtn|  clickrow|  false|  false|\n",
+            "|07hII2Rc29q4F2nTE...|2013-07-08 03:20:20|web player|    67587|Sun - Gildas Kits...|Two Door Cinema Club|The Kitsuné Speci...|    clickrow|  clickrow|  false|  false|\n",
+            "|4kO7mrAPfqIrsKwUO...|2013-07-08 03:20:36|web player|    12846|       Midnight City|                 M83|Hurry Up, We're D...|    clickrow|  clickrow|  false|  false|\n",
+            "|4oTIuUmpE2xdXrpon...|2013-07-08 03:21:13|web player|    36132|              Heaven|         Emeli Sandé|Our Version Of Ev...|    clickrow|  clickrow|  false|  false|\n",
+            "|49h0RYK3yzWkfbVyN...|2013-07-08 03:22:51|web player|    95817|    Do I Wanna Know?|      Arctic Monkeys|    Do I Wanna Know?|    clickrow|  clickrow|  false|  false|\n",
+            "|4iG2gAwKXsOcijVaV...|2013-07-08 03:22:54|web player|     1763|     Time to Pretend|                MGMT|Oracular Spectacular|    clickrow|   nextbtn|  false|  false|\n",
+            "|19K3lUMJmOdeuOBTr...|2013-07-08 03:33:38|web player|    45712|        Weekend Wars|                MGMT|Oracular Spectacular|     nextbtn|   nextbtn|  false|  false|\n",
+            "|5nv854ey1k43KaZ0k...|2013-07-08 03:37:30|web player|   228021|           The Youth|                MGMT|Oracular Spectacular|     nextbtn|   unknown|  false|  false|\n",
+            "|3FtYbEfBqAlGO46NU...|2013-07-08 03:41:21|web player|   229589|       Electric Feel|                MGMT|Oracular Spectacular|   trackdone| trackdone|  false|  false|\n",
+            "|1jJci4qxiYcOHhQR2...|2013-07-08 03:41:30|web player|     7332|                Kids|                MGMT|Oracular Spectacular|   trackdone|  clickrow|  false|  false|\n",
+            "+--------------------+-------------------+----------+---------+--------------------+--------------------+--------------------+------------+----------+-------+-------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#simple filter\n",
+        "\n",
+        "filtered_stream = stream_df.filter(stream_df.shuffle==False)\n"
+      ],
+      "metadata": {
+        "id": "Ha4_oIiKCLK7"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#filtered count\n",
+        "\n",
+        "query = filtered_stream.writeStream \\\n",
+        "    .format(\"memory\") \\\n",
+        "    .queryName(\"filteredStream\") \\\n",
+        "    .outputMode(\"append\") \\\n",
+        "    .start()"
+      ],
+      "metadata": {
+        "id": "Zu_qpHn1DhM8"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spark.sql(\"select count(1) from filteredStream\").show()"
+      ],
+      "metadata": {
+        "id": "Sha7Zo9xD7Az",
+        "outputId": "b3dad9f0-43b3-4121-8f7b-b1efe57c432a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------+\n",
+            "|count(1)|\n",
+            "+--------+\n",
+            "|   38141|\n",
+            "+--------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "display(filtered_stream)"
+      ],
+      "metadata": {
+        "id": "BatFYEgeEIn7",
+        "outputId": "7814c5be-365b-4780-dc0d-e99956e2a642",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "DataFrame[spotify_track_uri: string, ts: timestamp, platform: string, ms_played: bigint, track_name: string, artist_name: string, album_name: string, reason_start: string, reason_end: string, shuffle: boolean, skipped: boolean]"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     }
   ],
   "metadata": {
