--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwU5syzmlhcW",
-        "outputId": "0bd05583-9a82-4fb6-a85b-cc0b6e5eadf7"
+        "outputId": "cbf41b1e-dbe1-4d64-c0b2-d32999fce495"
       },
       "outputs": [
         {
@@ -178,11 +178,11 @@
           "name": "stdout",
           "text": [
             "Collecting pyngrok\n",
-            "  Downloading pyngrok-7.2.12-py3-none-any.whl.metadata (9.4 kB)\n",
+            "  Downloading pyngrok-7.3.0-py3-none-any.whl.metadata (8.1 kB)\n",
             "Requirement already satisfied: PyYAML>=5.1 in /usr/local/lib/python3.11/dist-packages (from pyngrok) (6.0.2)\n",
-            "Downloading pyngrok-7.2.12-py3-none-any.whl (26 kB)\n",
+            "Downloading pyngrok-7.3.0-py3-none-any.whl (25 kB)\n",
             "Installing collected packages: pyngrok\n",
-            "Successfully installed pyngrok-7.2.12\n",
+            "Successfully installed pyngrok-7.3.0\n",
             "Collecting findspark\n",
             "  Downloading findspark-2.0.1-py2.py3-none-any.whl.metadata (352 bytes)\n",
             "Downloading findspark-2.0.1-py2.py3-none-any.whl (4.4 kB)\n",
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -217,12 +217,13 @@
         "import findspark\n",
         "findspark.init()\n",
         "from pyngrok import ngrok\n",
+        "from pyngrok import conf\n",
         "import os"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -236,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eba9e62b-752e-4a7b-f574-16e0734bc12e"
+        "outputId": "3a464cd1-d615-435f-8b6f-244e4d265085"
       },
       "outputs": [
         {
@@ -252,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 6,
       "metadata": {
         "application/vnd.databricks.v1+cell": {
           "cellMetadata": {},
@@ -266,27 +267,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-Se1_tTAF09",
-        "outputId": "5db7a59b-5408-40a1-9b5c-d707b8d88b29"
+        "outputId": "239fd9b6-eac5-4053-aa01-d1868ea9fca0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:pyngrok.process.ngrok:t=2025-08-01T05:05:08+0000 lvl=warn msg=\"can't bind default web address, trying alternatives\" obj=web addr=127.0.0.1:4040\n"
+            "WARNING:pyngrok.process.ngrok:t=2025-08-05T13:05:39+0000 lvl=warn msg=\"can't bind default web address, trying alternatives\" obj=web addr=127.0.0.1:4040\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "http://d5d8befe36d7:4040\n",
-            "Spark UI URL: https://d49bd1da24ca.ngrok-free.app\n"
+            "http://a4a09b43a1c4:4040\n",
+            "Spark UI URL: https://20599a4ee1f6.ngrok-free.app\n"
           ]
         }
       ],
       "source": [
         "#required in google colab to check the Spark UI\n",
+        "#conf.get_default().ngrok_skip_browser_warning = True\n",
+        "\n",
         "spark_ui_url = spark.sparkContext.uiWebUrl\n",
         "print(spark_ui_url)\n",
         "if spark_ui_url:\n",
@@ -752,7 +755,7 @@
         },
         "outputId": "64ab6d73-cb98-456d-8f71-3b58c1a494d5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,7 +961,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1442,8 +1445,161 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "print(os.environ['SPARK_HOME'])\n",
+        "\n",
+        "#list the files available in the jars folder\n",
+        "!ls /usr/local/lib/python3.11/dist-packages/pyspark/jars\n"
+      ],
+      "metadata": {
+        "id": "KistbDITW6JD"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#OCI bucket connectivity\n",
+        "\n",
+        "#installation of required jars to connect to OCI\n",
+        "#https://github.com/oracle/oci-hdfs-connector/releases\n",
+        "\n",
+        "#download the jars from below link refer the latest version from above\n",
+        "!wget https://github.com/oracle/oci-hdfs-connector/releases/download/v3.4.1.0.0.3/oci-hdfs.zip\n",
+        "\n",
+        "#the file is downloaded into /content folder\n",
+        "\n",
+        "!unzip oci-hdfs.zip\n",
+        "\n",
+        "#move the files to jars folder\n",
+        "!cp /content/third-party/lib/* /usr/local/lib/python3.11/dist-packages/pyspark/jars\n",
+        "\n",
+        "!cp /content/lib/* /usr/local/lib/python3.11/dist-packages/pyspark/jars\n",
+        "\n",
+        "#check if the two files are available in the folder\n",
+        "!ls /usr/local/lib/python3.11/dist-packages/pyspark/jars |grep -i 'hdfs\\|jsr'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3XFcnl5UXZ4Q",
+        "outputId": "22a83e81-ff9c-4902-81aa-60fbc084832a"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jackson-datatype-jsr310-2.15.2.jar\n",
+            "jsr305-3.0.0.jar\n",
+            "jsr305-3.0.2.jar\n",
+            "oci-hdfs-full-3.4.1.0.0.3.jar\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls /usr/local/lib/python3.11/dist-packages/pyspark/jars |grep -i 'hdfs\\|jsr'\n",
+        "\n",
+        "!rm /usr/local/lib/python3.11/dist-packages/pyspark/jars/jsr305-3.0.0.jar\n",
+        "\n",
+        "!ls /usr/local/lib/python3.11/dist-packages/pyspark/jars |grep -i 'hdfs\\|jsr'"
+      ],
+      "metadata": {
+        "id": "48Suhi-G2kAF",
+        "outputId": "c0d9ef24-c974-48ca-c0cb-2c9547ed3711",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "jackson-datatype-jsr310-2.15.2.jar\n",
+            "jsr305-3.0.0.jar\n",
+            "jsr305-3.0.2.jar\n",
+            "oci-hdfs-full-3.4.1.0.0.3.jar\n",
+            "jackson-datatype-jsr310-2.15.2.jar\n",
+            "jsr305-3.0.2.jar\n",
+            "oci-hdfs-full-3.4.1.0.0.3.jar\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#keysetup\n",
+        "\n",
+        "!mkdir -p /content/.oci\n",
+        "!openssl genrsa -out /content/.oci/oci_api_key.pem 2048\n",
+        "!chmod go-rwx /content/.oci/oci_api_key.pem\n",
+        "!openssl rsa -pubout -in /content/.oci/oci_api_key.pem -out /content/.oci/oci_api_key_public.pem\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qn6Q-vgAporS",
+        "outputId": "18efffb8-27f1-432b-8b00-b30cb6825cda"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "writing RSA key\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat /content/.oci/oci_api_key_public.pem"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDP4KgMDqCTq",
+        "outputId": "e98b02e2-3884-4352-ee41-fd357a2fd45b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-----BEGIN PUBLIC KEY-----\n",
+            "MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEApTp69nC5Kjs5ktZGHUIm\n",
+            "f60oHIXOr5a7cHTpHsWyTDoEmU/q3t0Wk632pwNB7JO3mp64+U2isuGxvRJjEROo\n",
+            "EBgfK57nOcEe27PkHBM303Q5eLlLfPuvXwYQWJDjnxM0AOT7NkdGBIlZ82Au/fia\n",
+            "zvlgKnE+b8fUn8Y38HomOj2PuPtYFD/RXWOJwDJeXcMO8t9dZjotJFC+SmhKR5eu\n",
+            "j9legAxwlZ3fTUtnT04Q1eTTZSL9NwGboVOjIv/SljekF7LN4+Ky/uXEkZ5mqBV6\n",
+            "kXr4Tgo2K7I0bZXPkMTsMkxNFIza3mUEplKFqY/j/rrvaFcp1YU+22CYkW5BfuYR\n",
+            "EQIDAQAB\n",
+            "-----END PUBLIC KEY-----\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from pyspark.sql.functions import *\n",
         "from pyspark.sql.types import *\n",
+        "#define the schema structure\n",
         "\n",
         "#spotify_track_uri,ts,platform,ms_played,track_name,artist_name,album_name,reason_start,reason_end,shuffle,skipped\n",
         "\n",
@@ -1459,19 +1615,194 @@
         "    StructField(\"reason_end\",StringType()),\n",
         "    StructField(\"shuffle\",BooleanType()),\n",
         "    StructField(\"skipped\",BooleanType())\n",
-        "])\n",
+        "])\n"
+      ],
+      "metadata": {
+        "id": "-k4rYKppTXeN"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "    spark.stop()\n",
+        "except NameError:\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "UyL__Zdhv7lm"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import findspark\n",
         "\n",
-        "stream_df = spark.readStream \\\n",
-        ".format(\"csv\") \\\n",
-        ".schema(schema) \\\n",
-        ".option(\"maxFilesPerTrigger\",1) \\\n",
-        ".option(\"path\",\"/content/StreamingData\") \\\n",
-        ".load()"
+        "# Define the Spark version you are using\n",
+        "spark_version = \"spark-3.5.0\"\n",
+        "os.environ[\"SPARK_HOME\"] = f\"/usr/local/{spark_version}\"\n",
+        "\n",
+        "# Path to the OCI HDFS connector JARs\n",
+        "# Use the paths you confirmed with your ls command\n",
+        "oci_jar_path = \"/usr/local/lib/python3.11/dist-packages/pyspark/jars/oci-hdfs-full-3.4.1.0.0.3.jar\"\n",
+        "jsr305_jar_path = \"/usr/local/lib/python3.11/dist-packages/pyspark/jars/jsr305-3.0.2.jar\"\n",
+        "jackson_jsr_jar_path = \"/usr/local/lib/python3.11/dist-packages/pyspark/jars/jackson-datatype-jsr310-2.15.2.jar\"\n",
+        "\n",
+        "# Combine the paths into a comma-separated string for the --jars argument\n",
+        "jars_string = f\"{oci_jar_path},{jsr305_jar_path},{jackson_jsr_jar_path}\"\n",
+        "\n",
+        "# Now, set the PYSPARK_SUBMIT_ARGS environment variable\n",
+        "os.environ[\"PYSPARK_SUBMIT_ARGS\"] = f\"--jars {jars_string} pyspark-shell\"\n",
+        "\n",
+        "# Initialize findspark\n",
+        "findspark.init()\n"
+      ],
+      "metadata": {
+        "id": "N_ECV4bdx7x6"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "\n",
+        "\n",
+        "try:\n",
+        "    spark.stop()\n",
+        "except NameError:\n",
+        "    pass\n",
+        "\n",
+        "\n",
+        "print(\"Environment variables for Spark and JARs have been set.\")\n",
+        "# Build the SparkSession with OCI configurations\n",
+        "spark = SparkSession.builder \\\n",
+        "    .appName(\"OCIStructuredStreaming\") \\\n",
+        "    .config(\"spark.driver.extraClassPath\", classpath_jars_string) \\\n",
+        "    .config(\"spark.executor.extraClassPath\", classpath_jars_string) \\\n",
+        "    .config(\"spark.hadoop.fs.oci.client.hostname\", userdata.get('OCI_HOST')) \\\n",
+        "    .config(\"spark.hadoop.fs.oci.client.auth.tenantId\", userdata.get('OCI_TENANTID')) \\\n",
+        "    .config(\"spark.hadoop.fs.oci.client.auth.userId\", userdata.get('OCI_ID')) \\\n",
+        "    .config(\"spark.hadoop.fs.oci.client.auth.fingerprint\", userdata.get('OCI_FINGERPRINT')) \\\n",
+        "    .config(\"spark.hadoop.fs.oci.client.auth.pemfilepath\", \"/content/.oci/oci_api_key.pem\") \\\n",
+        "    .config(\"spark.hadoop.fs.oci.impl\", \"com.oracle.bmc.hdfs.OCIHDFSFileSystem\") \\\n",
+        "    .getOrCreate()\n",
+        "\n",
+        "spark.sparkContext.setLogLevel(\"DEBUG\")\n",
+        "\n",
+        "print(\"SparkSession created with OCI configurations.\")\n",
+        "\n",
+        "# # Define the input path for your OCI bucket\n",
+        "# # The OCI path format is oci://<bucket-name>@<namespace>/<prefix>\n",
+        "\n",
+        "\n",
+        "# # Use spark.readStream to read the data\n",
+        "# # You need to specify the format of your files (e.g., \"json\", \"csv\", \"parquet\")\n",
+        "# # You also need to provide a checkpoint location, which is crucial for\n",
+        "# # Structured Streaming to maintain state and provide fault tolerance.\n",
+        "# stream_df = spark.readStream \\\n",
+        "#     .format(\"csv\") \\\n",
+        "#     .schema(schema) \\\n",
+        "#     .option(\"maxFilesPerTrigger\", 1) \\\n",
+        "#     .load(input_path)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ijlTA5gfO8O",
+        "outputId": "9a880d07-805e-4dc0-f667-2ea256b917f2"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Environment variables for Spark and JARs have been set.\n",
+            "SparkSession created with OCI configurations.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_path = \"oci://ocipysparkdatasource@bm1mycqpwdo2/pysparksourcedata\"\n",
+        "stream_df = spark.read.text(input_path).limit(1)\n",
+        "stream_df.show()"
+      ],
+      "metadata": {
+        "id": "7c-K55kYwYuQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#accessing variables from config files if needed\n",
+        "!pip install python-dotenv\n",
+        "\n",
+        "import dotenv\n",
+        "import os\n",
+        "\n",
+        "dotenv.load_dotenv(\"/content/config.env\")\n",
+        "\n",
+        "my_url = os.getenv(\"MY_OCI_BUCKET_URL\")\n",
+        "\n",
+        "#print(f\"The URL read from config.env is: {my_url}\")\n"
       ],
       "metadata": {
         "id": "H1CnnfsMvvDX"
       },
-      "execution_count": 6,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#OCI accesssetup\n",
+        "!echo SPARK_HOME"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dIsrlKBnU69T",
+        "outputId": "02f7d2c2-e01c-4076-e810-867ea86d8d0d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SPARK_HOME\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# stream_df = spark.readStream \\\n",
+        "# .format(\"csv\") \\\n",
+        "# .schema(schema) \\\n",
+        "# .option(\"maxFilesPerTrigger\",1) \\\n",
+        "# .option(\"path\",my_url) \\\n",
+        "# .load()"
+      ],
+      "metadata": {
+        "id": "T508fMM9TR6p"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1486,7 +1817,7 @@
         "id": "MKUNba5I2Yh9",
         "outputId": "1e8fa933-38c2-45c9-e199-04493fdbc4d5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1510,7 +1841,7 @@
         "id": "vSHm3g-v2v3T",
         "outputId": "6227d0e3-3bc8-4107-885c-acce685244ba"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1555,7 +1886,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1601,7 +1932,7 @@
       "metadata": {
         "id": "Ha4_oIiKCLK7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1618,7 +1949,7 @@
       "metadata": {
         "id": "Zu_qpHn1DhM8"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1633,7 +1964,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1662,7 +1993,7 @@
           "height": 53
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1674,6 +2005,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "003e9425"
+      },
+      "source": [],
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
