--- a/Assets/Mynotebook101.ipynb
+++ b/Assets/Mynotebook101.ipynb
@@ -1511,11 +1511,11 @@
         "!ls /usr/local/lib/python3.11/dist-packages/pyspark/jars |grep -i 'hdfs\\|jsr'"
       ],
       "metadata": {
-        "id": "48Suhi-G2kAF",
-        "outputId": "c0d9ef24-c974-48ca-c0cb-2c9547ed3711",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "48Suhi-G2kAF",
+        "outputId": "c0d9ef24-c974-48ca-c0cb-2c9547ed3711"
       },
       "execution_count": 42,
       "outputs": [
@@ -1699,18 +1699,7 @@
         "print(\"SparkSession created with OCI configurations.\")\n",
         "\n",
         "# # Define the input path for your OCI bucket\n",
-        "# # The OCI path format is oci://<bucket-name>@<namespace>/<prefix>\n",
-        "\n",
-        "\n",
-        "# # Use spark.readStream to read the data\n",
-        "# # You need to specify the format of your files (e.g., \"json\", \"csv\", \"parquet\")\n",
-        "# # You also need to provide a checkpoint location, which is crucial for\n",
-        "# # Structured Streaming to maintain state and provide fault tolerance.\n",
-        "# stream_df = spark.readStream \\\n",
-        "#     .format(\"csv\") \\\n",
-        "#     .schema(schema) \\\n",
-        "#     .option(\"maxFilesPerTrigger\", 1) \\\n",
-        "#     .load(input_path)"
+        "# # The OCI path format is oci://<bucket-name>@<namespace>/<prefix>\n"
       ],
       "metadata": {
         "colab": {
@@ -1792,15 +1781,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# stream_df = spark.readStream \\\n",
-        "# .format(\"csv\") \\\n",
-        "# .schema(schema) \\\n",
-        "# .option(\"maxFilesPerTrigger\",1) \\\n",
-        "# .option(\"path\",my_url) \\\n",
-        "# .load()"
+        "\n",
+        "# # Use spark.readStream to read the data\n",
+        "# # You need to specify the format of your files (e.g., \"json\", \"csv\", \"parquet\")\n",
+        "# # You also need to provide a checkpoint location, which is crucial for\n",
+        "# # Structured Streaming to maintain state and provide fault tolerance.\n",
+        "stream_df = spark.readStream \\\n",
+        "    .format(\"csv\") \\\n",
+        "    .schema(schema) \\\n",
+        "    .option(\"maxFilesPerTrigger\", 1) \\\n",
+        "    .option(\"path\",my_url)\n",
+        "    .load()"
       ],
       "metadata": {
-        "id": "T508fMM9TR6p"
+        "id": "UXrmyrKWtER3"
       },
       "execution_count": null,
       "outputs": []
